--- a/starbucks/css/main.css
+++ b/starbucks/css/main.css
@@ -5,7 +5,6 @@ body {
   font-weight: 400;
   line-height: 1.4;
   font-family: 'Nanum Gothic', sans-serif;
-  height: 3000px;
 }
 
 img {
@@ -496,9 +495,11 @@ header .badges .badge {
   transition: height .4s;
   overflow: hidden;
 }
+
 .notice .promotion.hide {
   height: 0;
 }
+
 .notice .promotion .swiper-container {
   /* calc- 계산해주는 함수 */
   width: calc(819px * 3 + 20px);
@@ -552,7 +553,7 @@ header .badges .badge {
   background-image: url("../images/promotion_slide_pager_on.png");
 }
 
-.notice .promotion .swiper-prev, 
+.notice .promotion .swiper-prev,
 .notice .promotion .swiper-next {
   width: 42px;
   height: 42px;
@@ -568,15 +569,18 @@ header .badges .badge {
   align-items: center;
   transition: .4s;
 }
-.notice .promotion .swiper-prev{
+
+.notice .promotion .swiper-prev {
   left: 50%;
   margin-left: -480px;
 }
+
 .notice .promotion .swiper-next {
   right: 50%;
   margin-right: -480px;
 }
-.notice .promotion .swiper-prev:hover, 
+
+.notice .promotion .swiper-prev:hover,
 .notice .promotion .swiper-next:hover {
   background-color: #333;
   color: #fff;
@@ -586,6 +590,7 @@ header .badges .badge {
 .rewards {
   position: relative;
 }
+
 .rewards .bg-left {
   width: 50%;
   height: 100%;
@@ -594,6 +599,7 @@ header .badges .badge {
   top: 0;
   left: 0;
 }
+
 .rewards .bg-right {
   width: 50%;
   height: 100%;
@@ -602,11 +608,13 @@ header .badges .badge {
   top: 0;
   right: 0;
 }
+
 .rewards .inner {
   background-image: url(../images/rewards.jpg);
   height: 241px;
 
 }
+
 .rewards .btn-group {
   position: absolute;
   bottom: 24px;
@@ -616,12 +624,15 @@ header .badges .badge {
   /* wrap- 수평으로만드는데 가로넓이가 넘칠거같으면 줄바꿈 */
   flex-wrap: wrap;
 }
+
 .rewards .btn-group .btn.sign-up {
   margin-right: 10px;
 }
+
 .rewards .btn-group .btn.sign-in {
   width: 110px;
 }
+
 .rewards .btn-group .btn.gift {
   margin-top: 10px;
   /* flex-grow 최대한 너비를 늘려라 */
@@ -635,6 +646,7 @@ header .badges .badge {
   background-color: #333;
   overflow: hidden;
 }
+
 .youtube .youtube__area {
   width: 1920px;
   background-color: orange;
@@ -643,8 +655,9 @@ header .badges .badge {
   margin-left: calc(1920px / -2);
   top: 50%;
   /* 너비가 1920px 의 16:9 비율 만큼 절반위로 땡기기  */
-  margin-top: calc(1920px * 9 / 16 / -2); 
+  margin-top: calc(1920px * 9 / 16 / -2);
 }
+
 .youtube .youtube__area::before {
   content: "";
   display: block;
@@ -653,6 +666,7 @@ header .badges .badge {
   /* 16:9 비율로 내부공간 늘림 */
   padding-top: 56.25%;
 }
+
 /* 보다 어둡게 커버를 씌움 */
 .youtube .youtube__cover {
   background-image: url("../images/video_cover_pattern.png");
@@ -664,6 +678,7 @@ header .badges .badge {
   width: 100%;
   height: 100%;
 }
+
 /* #- id 이름을 찾는다 */
 #player {
   width: 100%;
@@ -672,21 +687,214 @@ header .badges .badge {
   top: 0;
   left: 0;
 }
+
 .youtube .inner {
   height: 700px;
 }
+
 .youtube .floating1 {
   position: absolute;
   top: 50px;
   left: 0;
 }
+
 .youtube .floating2 {
   position: absolute;
   top: 350px;
   left: 150px;
 }
+
 .youtube .floating3 {
   position: absolute;
   bottom: -200px;
   right: 0;
+}
+
+
+/* SEASON PRODUCT */
+.season-product {
+  background-image: url("../images/season_product_bg.jpg");
+}
+
+.season-product .inner {
+  height: 400px;
+}
+
+.season-product .floating3 {
+  position: absolute;
+  top: -200px;
+  right: 0;
+}
+
+.season-product .text-group {
+  position: absolute;
+  top: 110px;
+  right: 100px;
+}
+
+.season-product .text-group .title {
+  margin-bottom: 10px;
+}
+
+.season-product .text-group .description {
+  margin-bottom: 15px;
+}
+
+.season-product .text-group .more {}
+
+/* RESERVE COFFEE */
+.reserve-coffee {
+  background-image: url("../images/reserve_bg.jpg");
+}
+
+.reserve-coffee .inner {
+  height: 400px;
+}
+
+.reserve-coffee .reserve-logo {
+  position: absolute;
+  top: 110px;
+  left: 0;
+}
+
+.reserve-coffee .text-group {
+  position: absolute;
+  top: 124px;
+  left: 208px;
+}
+
+.reserve-coffee .product {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+/* PICK YOUR FAVORITE */
+.pick-your-favorite {
+  background-image: url("../images/favorite_bg.jpg");
+  /* 배경이미지 반복여부 */
+  background-repeat: no-repeat;
+  /* 배경의 위치는 그 세션의 정가운데에 위치 */
+  background-position: center;
+  /* 더이상 요소가 스크롤될때 같이 스크롤되지않고 이미지가 뷰포트부분에 고정, 화면이 스크롤 되더라도 같이 움직이지않는구조로 만듬 */
+  background-attachment: fixed;
+  /* 배경의 이미지를 요소에 더 넓은 너비에 맞춰서 출력 */
+  background-size: cover;
+}
+
+.pick-your-favorite .inner {
+  padding: 110px 0;
+}
+
+.pick-your-favorite .text-group {
+  margin-left: 100px;
+  width: 362px;
+  display: flex;
+  /* 내용이 넘치면 줄바꿈 */
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+
+.pick-your-favorite .text-group .title {
+  margin-bottom: 40px;
+}
+
+.pick-your-favorite .text-group .description {
+  margin-bottom: 40px;
+}
+
+/* RESERVE STORE */
+.reserve-store {
+  background-image: url("../images/reserve_store_bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.reserve-store .inner {
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.reserve-store .medal {
+  width: 334px;
+  height: 334px;
+  perspective: 600px;
+}
+
+.reserve-store .medal .front,
+.reserve-store .medal .back {
+  width: 334px;
+  height: 334px;
+  position: absolute;
+  /* 각각의 요소들이 뒤집어졌을떄 화면에 안보이게 한다 */
+  backface-visibility: hidden;
+  transition: 1s;
+}
+
+.reserve-store .medal .front {
+  transform: rotateY(0deg);
+}
+
+.reserve-store .medal:hover .front {
+  transform: rotateY(180deg); 
+}
+
+.reserve-store .medal .back {
+  transform: rotateY(-180deg); 
+}
+
+.reserve-store .medal:hover .back {
+  transform: rotateY(0deg);
+  
+}
+.reserve-store .medal .back .btn{
+  position: absolute;
+  top: 240px;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+/* FIND STORE */
+.find-store {
+  background-image: url(../images/find_store_bg.jpg);
+}
+.find-store .inner{
+  height: 400px;
+}
+.find-store .texture1{
+  position: absolute;
+  top: 0;
+  left: 400px;
+}
+.find-store .texture2{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+.find-store .picture{
+  border-radius: 50%;
+}
+.find-store .picture1{
+  position: absolute;
+  top: -60px;
+  left: 0;
+}
+.find-store .picture2{
+  position: absolute;
+  top: 150px;
+  left: 250px;
+}
+.find-store .text-group{
+  
+}
+.find-store .text-group .title{
+  
+}
+.find-store .text-group .description{
+  
 }
